feat: add report generation with PDF/Excel, MinIO, Elasticsearch, and audit logging